fix + almost finish handlers
